Details
-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
https://copy.sh/v86/ - 256 MB RAM, ACPI disabled
Description
ReactOS should not boot with ACPI HAL on hardware without ACPI. There should be a proper bugcheck in this case.
Steps to reproduce:
- Use v86 emulator: https://copy.sh/v86/
- Specify 256 MB RAM and disable ACPI
- Start livecd.iso and add to F10 command-line /FIRSTCHANCE /HAL=halacpi.dll
Currently an unhandled exception happens:
Entered debugger on first-chance exception (Exception Code: 0xc0000005) (Page Fault)
|
Memory at 0x00000000 could not be accessed
|
kdb:>
|
kdb:> bt
|
Eip:
|
<ntoskrnl.exe:89518 (ntoskrnl/io/pnpmgr/pnpres.c:1230 (IopDetectResourceConflict))>
|
Frames:
|
<ntoskrnl.exe:8ab04 (ntoskrnl/io/pnpmgr/pnpres.c:1182 (IopAssignDeviceResources))>
|
<ntoskrnl.exe:810aa (ntoskrnl/io/pnpmgr/devaction.c:2351 (PiDevNodeStateMachine))>
|
<ntoskrnl.exe:81825 (ntoskrnl/io/pnpmgr/devaction.c:2577 (PipDeviceActionWorker))>
|
<ntoskrnl.exe:81d88 (ntoskrnl/io/pnpmgr/devaction.c:2687 (PiQueueDeviceAction))>
|
<ntoskrnl.exe:252604 (ntoskrnl/io/iomgr/driver.c:1170 (IopInitializeBootDrivers))>
|
<ntoskrnl.exe:253685 (ntoskrnl/io/iomgr/iomgr.c:557 (IoInitSystem))>
|
<ntoskrnl.exe:24eb87 (ntoskrnl/ex/init.c:1809 (Phase1InitializationDiscard))>
|
<ntoskrnl.exe:30d9b (ntoskrnl/ex/init.c:2021 (Phase1Initialization))>
|
<ntoskrnl.exe:139d32 (ntoskrnl/ps/thread.c:156 (PspSystemThreadStartup))>
|
<ntoskrnl.exe:15c52d (ntoskrnl/ke/i386/thrdini.c:78 (KiThreadStartup))>
|
<ntoskrnl.exe:139d05 (ntoskrnl/ps/thread.c:63 (PspUserThreadStartup))>
|
Full debug log: v86-debug.log![]()
This problem was initially reported against Xbox platform, but since it's harder to debug it there, it's possible to reproduce on any machine configuration without ACPI.
Attachments
Issue Links
- relates to
-
CORE-17468 Install with Windows XP/S03 acpi.sys: 'Unhandled Kernel Mode Exception Pointers' + SYSTEM_THREAD_EXCEPTION_NOT_HANDLED
-
- Open
-