[HALX86] Bugcheck in case the ACPI initialization failed (for ACPI HAL) (#5376)

CORE-16302